--- a/wright_cv.html
+++ b/wright_cv.html
@@ -127,6 +127,11 @@ right
 </div>
 </div>
 </div>
+<div id="professional-background" class="section level1">
+<h1>Professional Background</h1>
+<div class="inote">
+<p>Icons link to additional content</p>
+</div>
 <div id="education" class="section level2 education nohead">
 <h2>Education</h2>
 <table>
@@ -159,6 +164,623 @@ right
 </tr>
 </tbody>
 </table>
+</div>
+<div id="career-history" class="section level2 history nohead">
+<h2>Career History</h2>
+<table>
+<colgroup>
+<col width="10%" />
+<col width="89%" />
+</colgroup>
+<thead>
+<tr class="header">
+<th align="left">year</th>
+<th align="left">what</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="left">2021 — current</td>
+<td align="left"><span style="font-weight: 500">Clinical Supervisor</span>, University of Oregon</td>
+</tr>
+<tr class="even">
+<td align="left">2016 — 2017</td>
+<td align="left"><span style="font-weight: 500">Speech-Language Pathologist</span>, Amita Health Care: Alexian Brothers Medical Center – <em>Elk Grove Village, IL</em></td>
+</tr>
+<tr class="odd">
+<td align="left">2015 — 2017</td>
+<td align="left"><span style="font-weight: 500">Speech-Language Pathologist</span>, Chicago Public Schools – <em>Chicago, IL</em></td>
+</tr>
+<tr class="even">
+<td align="left">2015 — 2016</td>
+<td align="left"><span style="font-weight: 500">Speech-Language Pathologist</span>, Education Solutions, LLC – <em>Chicago, IL</em></td>
+</tr>
+<tr class="odd">
+<td align="left">2014 — 2015</td>
+<td align="left"><span style="font-weight: 500">Speech-Language Pathologist</span>, Chicago International Charter Schools – <em>Chicago, IL</em></td>
+</tr>
+<tr class="even">
+<td align="left">2014 — 2014</td>
+<td align="left"><span style="font-weight: 500">Graduate Student Clinician</span>, Edward Hines, Jr. VA Hospital – <em>Hines, IL</em></td>
+</tr>
+</tbody>
+</table>
+</div>
+<div id="graduate-student-teaching-experience" class="section level2">
+<h2>Graduate Student Teaching Experience</h2>
+<table>
+<colgroup>
+<col width="9%" />
+<col width="90%" />
+</colgroup>
+<tbody>
+<tr class="odd">
+<td align="left">2021 — 2021</td>
+<td align="left"><span style="font-weight: 500">Course instructor for CDS 663: <em>Management of Acquired Cognitive Disorders</em></span>, University of Oregon</td>
+</tr>
+<tr class="even">
+<td align="left">2017 — 2021</td>
+<td align="left"><span style="font-weight: 500">Clinical supervisor and co-director for the Brain Injury and Concussion Clinic</span>, University of Oregon</td>
+</tr>
+<tr class="odd">
+<td align="left">2018 — 2021</td>
+<td align="left"><span style="font-weight: 500">Mentor for graduate student capstone projects</span>, University of Oregon</td>
+</tr>
+</tbody>
+</table>
+</div>
+<div id="graduate-student-service" class="section level2">
+<h2>Graduate Student Service</h2>
+<table>
+<colgroup>
+<col width="3%" />
+<col width="31%" />
+<col width="64%" />
+</colgroup>
+<tbody>
+<tr class="odd">
+<td align="left">2020 — 2021</td>
+<td align="left"><span style="font-weight: 500">Data Consultant</span>, Hawaii Concussion Awareness and Management Program (HCAMP)</td>
+<td align="left">Consulted with HCAMP team to conduct retrospective exploratory data analysis on Immediate Post-Concussion Assessment and Cognitive Testing (ImPACT) scores and Post-Concussion Symptom Scale (PCSS) severity ratings</td>
+</tr>
+<tr class="even">
+<td align="left">2018 — 2021</td>
+<td align="left"><span style="font-weight: 500">Co-director, Brain Injury and Concussion Clinic (BrICC)</span>, University of Oregon</td>
+<td align="left">Responsible for development of the clinic term schedule, recruitment of clients, development of assessment materials to measure student outcome, and the development of a treatment protocol for adolescents with prolonged concussion symptoms</td>
+</tr>
+<tr class="odd">
+<td align="left">2018 — 2021</td>
+<td align="left"><span style="font-weight: 500">Research Assistant</span>, Eugene Youth Concussion Management Team</td>
+<td align="left">Assisted in the development of system for client data tracking and provided clinical supervision to clients treated in the BrICC</td>
+</tr>
+</tbody>
+</table>
+</div>
+<div id="professional-affiliations" class="section level2">
+<h2>Professional Affiliations</h2>
+<table>
+<colgroup>
+<col width="9%" />
+<col width="90%" />
+</colgroup>
+<tbody>
+<tr class="odd">
+<td align="left">2015 — current</td>
+<td align="left"><span style="font-weight: 500">American Speech-Language Hearing Association Special Interest Group 2: Neurophysiology and Neurogenic Speech and Language Disorders</span></td>
+</tr>
+</tbody>
+</table>
+</div>
+<div id="certification-and-licensure" class="section level2">
+<h2>Certification and Licensure</h2>
+<table>
+<colgroup>
+<col width="12%" />
+<col width="87%" />
+</colgroup>
+<tbody>
+<tr class="odd">
+<td align="left">2017 — current</td>
+<td align="left"><span style="font-weight: 500">License in Speech-Langauge Pathology</span>, State of Oregon</td>
+</tr>
+<tr class="even">
+<td align="left">2015 — current</td>
+<td align="left"><span style="font-weight: 500">License in Speech-Langauge Pathology</span>, State of Illinois</td>
+</tr>
+<tr class="odd">
+<td align="left">2015 — current</td>
+<td align="left"><span style="font-weight: 500">Certificate of Clinical Competence</span>, American Speech-Language Hearing Association</td>
+</tr>
+</tbody>
+</table>
+</div>
+<div id="professional-training" class="section level2">
+<h2>Professional Training</h2>
+<table>
+<colgroup>
+<col width="12%" />
+<col width="87%" />
+</colgroup>
+<tbody>
+<tr class="odd">
+<td align="left">2014 — current</td>
+<td align="left"><span style="font-weight: 500">CPR certified by the American Heart Association</span></td>
+</tr>
+<tr class="even">
+<td align="left">2017 — current</td>
+<td align="left"><span style="font-weight: 500">Picture Exchange Communication System Level 1</span>, Chicago Public Schools – Chicago, IL</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+<div id="scholarship" class="section level1">
+<h1>Scholarship</h1>
+<div class="inote">
+<p>Icons link to additional content</p>
+</div>
+<div id="peer-reviewed-publications" class="section level2">
+<h2>Peer-Reviewed Publications</h2>
+<div class="hangingindent prpa nohead">
+<table>
+<colgroup>
+<col width="0%" />
+<col width="1%" />
+<col width="97%" />
+</colgroup>
+<thead>
+<tr class="header">
+<th align="left">year</th>
+<th align="left">count</th>
+<th align="left">cites</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="left">2021</td>
+<td align="left">2.</td>
+<td align="left">Wright, J. &amp; Sohlberg, M.M (2021). The implementation of a personalized dynamic approach for the management of prolonged concussion symptoms. <em>American Journal of Speech-Language Pathology</em>. 1-14. <a href="https://pubs.asha.org/doi/10.1044/2021_AJSLP-20-00306">doi: https://doi.org/10.1044/2021_AJSLP-20-00306</a></td>
+</tr>
+<tr class="even">
+<td align="left">2020</td>
+<td align="left">1.</td>
+<td align="left">Wright, J., Sohlberg, M.M., Watson-Stites, R., &amp; McCart, M (2020). Identification of key therapy ingredients for SLPSs serving on multidisciplinary teams facilitating return to learn for students with prolonged cognitive effects after concussion: A retrospective analysis. <em>Topics in Language Disorders</em>. <em>40</em>(1), 6-35. <a href="https://journals.lww.com/topicsinlanguagedisorders/Abstract/2020/01000/Identification_of_Key_Therapy_Ingredients_for_SLPs.3.aspx">doi: https://doi.org/10.1097/TLD.0000000000000198</a></td>
+</tr>
+<tr class="odd">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="even">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="odd">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="even">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="odd">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="even">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="odd">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+</tbody>
+</table>
+</div>
+<p><br class="pageBreak"/></p>
+<div class="hangingindent prpa nohead">
+<table>
+<colgroup>
+<col width="0%" />
+<col width="1%" />
+<col width="97%" />
+</colgroup>
+<thead>
+<tr class="header">
+<th align="left">year</th>
+<th align="left">count</th>
+<th align="left">cites</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="even">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="odd">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="even">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="odd">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="even">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="odd">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="even">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="odd">
+<td align="left">2020</td>
+<td align="left">1.</td>
+<td align="left">Wright, J., Sohlberg, M.M., Watson-Stites, R., &amp; McCart, M (2020). Identification of key therapy ingredients for SLPSs serving on multidisciplinary teams facilitating return to learn for students with prolonged cognitive effects after concussion: A retrospective analysis. <em>Topics in Language Disorders</em>. <em>40</em>(1), 6-35. <a href="https://journals.lww.com/topicsinlanguagedisorders/Abstract/2020/01000/Identification_of_Key_Therapy_Ingredients_for_SLPs.3.aspx">doi: https://doi.org/10.1097/TLD.0000000000000198</a></td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+<div id="professional-presentations" class="section level2">
+<h2>Professional Presentations</h2>
+<div class="hangingindent">
+<table>
+<colgroup>
+<col width="1%" />
+<col width="1%" />
+<col width="96%" />
+</colgroup>
+<thead>
+<tr class="header">
+<th align="left">year</th>
+<th align="left">count</th>
+<th align="left">cites</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="left">2020</td>
+<td align="left">4.</td>
+<td align="left">Wright, J. &amp; Sohlberg, M.M (2020, March). <em>The Role of the SLP in Multidisciplinary Concussion Management for Adolescents Experiencing Persistent Concussion Symptoms (PCS)</em>. Paper presented at the Center on Brain Injury Research and Training Webinar,webinar.</td>
+</tr>
+<tr class="even">
+<td align="left"></td>
+<td align="left">3.</td>
+<td align="left">Wright, J. &amp; Sohlberg, M.M (2020, March). <em>Identifying Key Treatment Ingredients SLPs Utilize to Treat Prolonged Cognitive Symptoms Post-Concussion in Adolescents</em>. Paper presented at the annual meeting of the University of Oregon Department of Communication Disorders and Sciences Continuing Education Opportunity Event, Eugene, OR.</td>
+</tr>
+<tr class="odd">
+<td align="left">2019</td>
+<td align="left">2.</td>
+<td align="left">Wright, J. &amp; Sohlberg, M.M (2019, November). <em>Identifying Key Treatment Ingredients SLPs Utilize to Treat Persistent Cognitive Symptoms Post-Concussion in Adolescents</em>. Paper presented at the annual meeting of the American Speech-Language Hearing Association National Conference, Orlando, FL.</td>
+</tr>
+<tr class="even">
+<td align="left"></td>
+<td align="left">1.</td>
+<td align="left">Wright, J. &amp; Sohlberg, M.M (2019, October). <em>The Role of the SLP in Multidisciplinary Concussion Management for Adolescents Experiencing Persistent Concussion Symptoms (PCS)</em>. Paper presented at the annual meeting of the Oregon Speech-Language Hearing Association State Conference, Salem, OR.</td>
+</tr>
+<tr class="odd">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="even">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="odd">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+</tbody>
+</table>
+</div>
+<table>
+<thead>
+<tr class="header">
+<th align="left">year</th>
+<th align="left">count</th>
+<th align="left">cites</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="even">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="odd">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="even">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="odd">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="even">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="odd">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="even">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="odd">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="even">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="odd">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+</tbody>
+</table>
+</div>
+<table>
+<thead>
+<tr class="header">
+<th align="left">year</th>
+<th align="left">count</th>
+<th align="left">cites</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="even">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="odd">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="even">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="odd">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="even">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="odd">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="even">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="odd">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="even">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+</tbody>
+</table>
+</div>
+<table>
+<colgroup>
+<col width="1%" />
+<col width="1%" />
+<col width="96%" />
+</colgroup>
+<thead>
+<tr class="header">
+<th align="left">year</th>
+<th align="left">count</th>
+<th align="left">cites</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="even">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="odd">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="even">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="odd">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="even">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="odd">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="even">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="odd">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="even">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="odd">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="even">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="odd">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="even">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="odd">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="even">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="odd">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="even">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="odd">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="even">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="odd">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="even">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="odd">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="even">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="odd">
+<td align="left"></td>
+<td align="left"></td>
+<td align="left"></td>
+</tr>
+<tr class="even">
+<td align="left"></td>
+<td align="left">1.</td>
+<td align="left">Wright, J. &amp; Sohlberg, M.M (2019, October). <em>The Role of the SLP in Multidisciplinary Concussion Management for Adolescents Experiencing Persistent Concussion Symptoms (PCS)</em>. Paper presented at the annual meeting of the Oregon Speech-Language Hearing Association State Conference, Salem, OR.</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
 </div>
 </div>
 
