CV ready to publish

--- a/wright_cv.html
+++ b/wright_cv.html
@@ -18,7 +18,7 @@
 <meta name="description" content="Jim Wright CV">
 
 <script id="pandoc-meta" type="application/json">
-{"newpage_html_class":"page-break-after","links-to-footnotes":null,"date":"Updated 2021-06-09","output":{"pagedown::html_paged":{"self_contained":null,"css":["anderson-cv.css"],"number_sections":null}},"title":"Jim Wright CV"}
+{"newpage_html_class":"page-break-after","links-to-footnotes":null,"date":"Updated 2021-06-11","output":{"pagedown::html_paged":{"self_contained":null,"css":["anderson-cv.css"],"number_sections":null}},"title":"Jim Wright CV"}
 </script>
 
 <title>Jim Wright CV</title>
@@ -47,7 +47,7 @@
 <div class="front-page">
 <div id="header" class="title-page">
 <h1 class="title">Jim Wright CV</h1>
-<h2 class="date">Updated 2021-06-09</h2>
+<h2 class="date">Updated 2021-06-11</h2>
 </div>
 </div>
 
@@ -77,7 +77,7 @@
 <div class = "last", id="bloc2">Wright</div>
 </div>
 <div id = "position", class = "position">
-Clinical Supervisor 
+Clinical Supervisor at the University of Oregon Department of Communication Disorders and Sciences
 </div>
 <div id = "sub", class = "sub">
 Curriculum Vita
@@ -89,6 +89,9 @@ About Me
 </h2>
 <p>
 I am primarily interested in multidisciplinary concussion management and the development of empirically driven return-to-learn guidelines for students recovering from concussion.
+</p>
+<p>
+The style and format of this CV developed by <a href="https://github.com/datalorax">Daniel Anderson, Ph.D.</a>
 </p>
 </div>
 <div class="col- grid-item">
@@ -169,39 +172,47 @@ right
 <h2>Career History</h2>
 <table>
 <colgroup>
-<col width="10%" />
-<col width="89%" />
+<col width="4%" />
+<col width="39%" />
+<col width="55%" />
 </colgroup>
 <thead>
 <tr class="header">
 <th align="left">year</th>
 <th align="left">what</th>
+<th align="left">additional_info</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
 <td align="left">2021 — current</td>
 <td align="left"><span style="font-weight: 500">Clinical Supervisor</span>, University of Oregon</td>
+<td align="left">Provide clinical supervison to Master’s students in the Communication Disorders and Sciences program, primarily for treatment sessions in the School-Age Clinic and the Brain Injury and Concussion Clinic</td>
 </tr>
 <tr class="even">
 <td align="left">2016 — 2017</td>
 <td align="left"><span style="font-weight: 500">Speech-Language Pathologist</span>, Amita Health Care: Alexian Brothers Medical Center – <em>Elk Grove Village, IL</em></td>
+<td align="left">Provided swallowing, speech, and language assessment and treatment in an acute care setting on a PRN basis</td>
 </tr>
 <tr class="odd">
 <td align="left">2015 — 2017</td>
 <td align="left"><span style="font-weight: 500">Speech-Language Pathologist</span>, Chicago Public Schools – <em>Chicago, IL</em></td>
+<td align="left">Provided direct and indirect speech and language services in the pre-K through grade 12 setting across a total of 4 schools</td>
 </tr>
 <tr class="even">
 <td align="left">2015 — 2016</td>
 <td align="left"><span style="font-weight: 500">Speech-Language Pathologist</span>, Education Solutions, LLC – <em>Chicago, IL</em></td>
+<td align="left">Provided direct speech and language therapy for students in private schools</td>
 </tr>
 <tr class="odd">
 <td align="left">2014 — 2015</td>
 <td align="left"><span style="font-weight: 500">Speech-Language Pathologist</span>, Chicago International Charter Schools – <em>Chicago, IL</em></td>
+<td align="left">Provided direct and indirect speech and language services to a caseload of 40 students across one elementary school and one high school</td>
 </tr>
 <tr class="even">
 <td align="left">2014 — 2014</td>
 <td align="left"><span style="font-weight: 500">Graduate Student Clinician</span>, Edward Hines, Jr. VA Hospital – <em>Hines, IL</em></td>
+<td align="left">Completed 10-week graduate student rotation where I obtained experience providing inpatient and outpatient speech therapy services to veterans</td>
 </tr>
 </tbody>
 </table>
@@ -321,12 +332,14 @@ right
 </div>
 <div id="peer-reviewed-publications" class="section level2">
 <h2>Peer-Reviewed Publications</h2>
-<div class="hangingindent prpa nohead">
+<div class = "hangingindent prpa nohead">
+
+
 <table>
 <colgroup>
 <col width="0%" />
 <col width="1%" />
-<col width="97%" />
+<col width="98%" />
 </colgroup>
 <thead>
 <tr class="header">
@@ -339,12 +352,12 @@ right
 <tr class="odd">
 <td align="left">2021</td>
 <td align="left">2.</td>
-<td align="left">Wright, J. &amp; Sohlberg, M.M (2021). The implementation of a personalized dynamic approach for the management of prolonged concussion symptoms. <em>American Journal of Speech-Language Pathology</em>. 1-14. <a href="https://pubs.asha.org/doi/10.1044/2021_AJSLP-20-00306">doi: https://doi.org/10.1044/2021_AJSLP-20-00306</a></td>
+<td align="left"><span style="font-weight: 500">Wright, J.</span> &amp; Sohlberg, M.M (2021). The implementation of a personalized dynamic approach for the management of prolonged concussion symptoms. <em>American Journal of Speech-Language Pathology</em>. 1-14. <a href="https://pubs.asha.org/doi/10.1044/2021_AJSLP-20-00306">doi: https://doi.org/10.1044/2021_AJSLP-20-00306</a></td>
 </tr>
 <tr class="even">
 <td align="left">2020</td>
 <td align="left">1.</td>
-<td align="left">Wright, J., Sohlberg, M.M., Watson-Stites, R., &amp; McCart, M (2020). Identification of key therapy ingredients for SLPSs serving on multidisciplinary teams facilitating return to learn for students with prolonged cognitive effects after concussion: A retrospective analysis. <em>Topics in Language Disorders</em>. <em>40</em>(1), 6-35. <a href="https://journals.lww.com/topicsinlanguagedisorders/Abstract/2020/01000/Identification_of_Key_Therapy_Ingredients_for_SLPs.3.aspx">doi: https://doi.org/10.1097/TLD.0000000000000198</a></td>
+<td align="left"><span style="font-weight: 500">Wright, J.</span>, Sohlberg, M.M., Watson-Stites, R., &amp; McCart, M (2020). Identification of key therapy ingredients for SLPSs serving on multidisciplinary teams facilitating return to learn for students with prolonged cognitive effects after concussion: A retrospective analysis. <em>Topics in Language Disorders</em>. <em>40</em>(1), 6-35. <a href="https://journals.lww.com/topicsinlanguagedisorders/Abstract/2020/01000/Identification_of_Key_Therapy_Ingredients_for_SLPs.3.aspx">doi: https://doi.org/10.1097/TLD.0000000000000198</a></td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
@@ -384,11 +397,16 @@ right
 </tbody>
 </table>
 </div>
-<p><br class="pageBreak"/></p>
-<div class="hangingindent prpa nohead">
+<div id="professional-presentations" class="section level2">
+<h2>Professional Presentations</h2>
+<div class = "hangingindent prpa nohead">
+
+
+
+
 <table>
 <colgroup>
-<col width="0%" />
+<col width="1%" />
 <col width="1%" />
 <col width="97%" />
 </colgroup>
@@ -401,90 +419,24 @@ right
 </thead>
 <tbody>
 <tr class="odd">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-<tr class="even">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-<tr class="odd">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-<tr class="even">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-<tr class="odd">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-<tr class="even">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-<tr class="odd">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-<tr class="even">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-<tr class="odd">
-<td align="left">2020</td>
-<td align="left">1.</td>
-<td align="left">Wright, J., Sohlberg, M.M., Watson-Stites, R., &amp; McCart, M (2020). Identification of key therapy ingredients for SLPSs serving on multidisciplinary teams facilitating return to learn for students with prolonged cognitive effects after concussion: A retrospective analysis. <em>Topics in Language Disorders</em>. <em>40</em>(1), 6-35. <a href="https://journals.lww.com/topicsinlanguagedisorders/Abstract/2020/01000/Identification_of_Key_Therapy_Ingredients_for_SLPs.3.aspx">doi: https://doi.org/10.1097/TLD.0000000000000198</a></td>
-</tr>
-</tbody>
-</table>
-</div>
-</div>
-<div id="professional-presentations" class="section level2">
-<h2>Professional Presentations</h2>
-<div class="hangingindent">
-<table>
-<colgroup>
-<col width="1%" />
-<col width="1%" />
-<col width="96%" />
-</colgroup>
-<thead>
-<tr class="header">
-<th align="left">year</th>
-<th align="left">count</th>
-<th align="left">cites</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
 <td align="left">2020</td>
 <td align="left">4.</td>
-<td align="left">Wright, J. &amp; Sohlberg, M.M (2020, March). <em>The Role of the SLP in Multidisciplinary Concussion Management for Adolescents Experiencing Persistent Concussion Symptoms (PCS)</em>. Paper presented at the Center on Brain Injury Research and Training Webinar,webinar.</td>
+<td align="left"><span style="font-weight: 500">Wright, J.</span> &amp; Sohlberg, M.M (2020, March). <em>The Role of the SLP in Multidisciplinary Concussion Management for Adolescents Experiencing Persistent Concussion Symptoms (PCS)</em>. Paper presented at the Center on Brain Injury Research and Training,Webinar.</td>
 </tr>
 <tr class="even">
 <td align="left"></td>
 <td align="left">3.</td>
-<td align="left">Wright, J. &amp; Sohlberg, M.M (2020, March). <em>Identifying Key Treatment Ingredients SLPs Utilize to Treat Prolonged Cognitive Symptoms Post-Concussion in Adolescents</em>. Paper presented at the annual meeting of the University of Oregon Department of Communication Disorders and Sciences Continuing Education Opportunity Event, Eugene, OR.</td>
+<td align="left"><span style="font-weight: 500">Wright, J.</span> &amp; Sohlberg, M.M (2020, March). <em>Identifying Key Treatment Ingredients SLPs Utilize to Treat Prolonged Cognitive Symptoms Post-Concussion in Adolescents</em>. Paper presented at the annual meeting of the University of Oregon Department of Communication Disorders and Sciences Continuing Education Opportunity Event, Eugene, OR.</td>
 </tr>
 <tr class="odd">
 <td align="left">2019</td>
 <td align="left">2.</td>
-<td align="left">Wright, J. &amp; Sohlberg, M.M (2019, November). <em>Identifying Key Treatment Ingredients SLPs Utilize to Treat Persistent Cognitive Symptoms Post-Concussion in Adolescents</em>. Paper presented at the annual meeting of the American Speech-Language Hearing Association National Conference, Orlando, FL.</td>
+<td align="left"><span style="font-weight: 500">Wright, J.</span> &amp; Sohlberg, M.M (2019, November). <em>Identifying Key Treatment Ingredients SLPs Utilize to Treat Persistent Cognitive Symptoms Post-Concussion in Adolescents</em>. Paper presented at the annual meeting of the American Speech-Language Hearing Association National Conference, Orlando, FL.</td>
 </tr>
 <tr class="even">
 <td align="left"></td>
 <td align="left">1.</td>
-<td align="left">Wright, J. &amp; Sohlberg, M.M (2019, October). <em>The Role of the SLP in Multidisciplinary Concussion Management for Adolescents Experiencing Persistent Concussion Symptoms (PCS)</em>. Paper presented at the annual meeting of the Oregon Speech-Language Hearing Association State Conference, Salem, OR.</td>
+<td align="left"><span style="font-weight: 500">Wright, J.</span> &amp; Sohlberg, M.M (2019, October). <em>The Role of the SLP in Multidisciplinary Concussion Management for Adolescents Experiencing Persistent Concussion Symptoms (PCS)</em>. Paper presented at the annual meeting of the Oregon Speech-Language Hearing Association State Conference, Salem, OR.</td>
 </tr>
 <tr class="odd">
 <td align="left"></td>
@@ -503,283 +455,6 @@ right
 </tr>
 </tbody>
 </table>
-</div>
-<table>
-<thead>
-<tr class="header">
-<th align="left">year</th>
-<th align="left">count</th>
-<th align="left">cites</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-<tr class="even">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-<tr class="odd">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-<tr class="even">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-<tr class="odd">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-<tr class="even">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-<tr class="odd">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-<tr class="even">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-<tr class="odd">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-<tr class="even">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-<tr class="odd">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-</tbody>
-</table>
-</div>
-<table>
-<thead>
-<tr class="header">
-<th align="left">year</th>
-<th align="left">count</th>
-<th align="left">cites</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-<tr class="even">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-<tr class="odd">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-<tr class="even">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-<tr class="odd">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-<tr class="even">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-<tr class="odd">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-<tr class="even">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-<tr class="odd">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-<tr class="even">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-</tbody>
-</table>
-</div>
-<table>
-<colgroup>
-<col width="1%" />
-<col width="1%" />
-<col width="96%" />
-</colgroup>
-<thead>
-<tr class="header">
-<th align="left">year</th>
-<th align="left">count</th>
-<th align="left">cites</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-<tr class="even">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-<tr class="odd">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-<tr class="even">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-<tr class="odd">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-<tr class="even">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-<tr class="odd">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-<tr class="even">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-<tr class="odd">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-<tr class="even">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-<tr class="odd">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-<tr class="even">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-<tr class="odd">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-<tr class="even">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-<tr class="odd">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-<tr class="even">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-<tr class="odd">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-<tr class="even">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-<tr class="odd">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-<tr class="even">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-<tr class="odd">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-<tr class="even">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-<tr class="odd">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-<tr class="even">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-<tr class="odd">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
-</tr>
-<tr class="even">
-<td align="left"></td>
-<td align="left">1.</td>
-<td align="left">Wright, J. &amp; Sohlberg, M.M (2019, October). <em>The Role of the SLP in Multidisciplinary Concussion Management for Adolescents Experiencing Persistent Concussion Symptoms (PCS)</em>. Paper presented at the annual meeting of the Oregon Speech-Language Hearing Association State Conference, Salem, OR.</td>
-</tr>
-</tbody>
-</table>
-</div>
 </div>
 </div>
 </div>
