--- a/content/summary.html
+++ b/content/summary.html
@@ -174,6 +174,9 @@ About Me
 <p>
 I am primarily interested in multidisciplinary concussion management and the development of empirically driven return-to-learn guidelines for students recovering from concussion.
 </p>
+<p>
+The style and format of this CV developed by <a href="https://github.com/datalorax">Daniel Anderson, Ph.D.</a>
+</p>
 </div>
 
 
