--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
 
 <div class="main">
 <div class="download">
-<p>Download PDF
-<a href="https://github.com/datalorax/anderson-cv/raw/master/anderson-cv.pdf" class="icon-block">
-<i class="fas fafooter fa-download"></i>
+<p>View online
+<a href="https://datalorax.github.io/anderson-cv/" class="icon-block">
+<i class="fas fafooter fa-globe"></i>
 </a></p>
 </div>
 <div class = "footer",>
