--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
 
 <div class="main">
 <div class="download">
-<p>View online
-<a href="https://datalorax.github.io/anderson-cv/" class="icon-block">
-<i class="fas fafooter fa-globe"></i>
+<p>Download PDF
+<a href="https://jim-wright90.github.io/wright_cv/raw/master/wright_cv.pdf" class="icon-block">
+<i class="fas fafooter fa-download"></i>
 </a></p>
 </div>
 <div class = "footer",>
