added honors and awards

--- a/index.html
+++ b/index.html
@@ -454,6 +454,34 @@ right
 </table>
 </div>
 </div>
+<div id="honors-and-awards" class="section level1 submitted nohead">
+<h1>Honors and Awards</h1>
+<div class="hangingindent">
+
+
+<table>
+<colgroup>
+<col width="1%" />
+<col width="98%" />
+</colgroup>
+<thead>
+<tr class="header">
+<th align="left">count</th>
+<th align="left">cite</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="left">2.</td>
+<td align="left"><em>Graduate Student Staff Excellence Award</em>: College of Education, University of Oregon. (2019). The purpose of the Graduate Student Staff Excellence Award is to recognize graduate employees for their hard work and service to the College of Education.</td>
+</tr>
+<tr class="even">
+<td align="left">1.</td>
+<td align="left"><em>Bullock Fund Scholarship Award</em>: Department of Communication Disorders &amp; Sciences, University of Oregon. (2019). The Bullock Fund is a state fund established through the will of Evelyn Bullock to support faculty and student research projects in Communication Disorders and Sciences. To be eligible for this award, graduate students must be making satisfactory progress toward completion of their graduate program.</td>
+</tr>
+</tbody>
+</table>
+</div>
 </div>
 
 
