pdf option update

--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
 <meta name="description" content="Jim Wright CV">
 
 <script id="pandoc-meta" type="application/json">
-{"newpage_html_class":"page-break-after","links-to-footnotes":null,"date":"Updated 2021-06-11","output":{"pagedown::html_paged":{"self_contained":null,"css":["anderson-cv.css"],"number_sections":null}},"title":"Jim Wright CV"}
+{"newpage_html_class":"page-break-after","links-to-footnotes":false,"date":"Updated 2021-08-23","output":{"pagedown::html_paged":{"self_contained":false,"css":["anderson-cv.css"],"number_sections":false}},"title":"Jim Wright CV"}
 </script>
 
 <title>Jim Wright CV</title>
 
 
-<script src="index_files/header-attrs-2.8/header-attrs.js"></script>
-<script src="index_files/paged-0.14/js/config.js"></script>
-<script src="index_files/paged-0.14/js/paged.js"></script>
-<script src="index_files/paged-0.14/js/hooks.js"></script>
+<script src="index_files/header-attrs-2.10/header-attrs.js"></script>
+<script src="index_files/paged-0.15/js/config.js"></script>
+<script src="index_files/paged-0.15/js/paged.js"></script>
+<script src="index_files/paged-0.15/js/hooks.js"></script>
 
 
 
@@ -47,7 +47,7 @@
 <div class="front-page">
 <div id="header" class="title-page">
 <h1 class="title">Jim Wright CV</h1>
-<h2 class="date">Updated 2021-06-11</h2>
+<h2 class="date">Updated 2021-08-23</h2>
 </div>
 </div>
 
@@ -56,7 +56,10 @@
 
 <div class="main">
 <div class="download">
-
+<p>Download PDF
+<a href="https://jim-wright90.github.io/wright_cv/raw/master/index.pdf" class="icon-block">
+<i class="fas fafooter fa-download"></i>
+</a></p>
 </div>
 <div class = "footer",>
   <a href="https://github.com/Jim-Wright90" class="icon-block">
